[tool.poetry]
name = "flask headers handler"
version = "0.1.0"
description = ""
authors = ["LWH"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
uvicorn = {version = "0.12.0", extras = ["standard"]}
gunicorn = ">=20.1.0"
Flask = "^2.0.2"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mutagen = "^1.45.1"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
